--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,19 +1,25 @@
 <div class="row">
 
-    <div class="col-md-3 col-sm-6">
+    @for (gif of gifs; track $index) {
+        
+        <div class="col-md-3 col-sm-6">
 
-        <div class="card m-2 text-center bg-dark">
+            <div class="card m-2 text-center bg-dark">
 
-            <div class="card-body text-light">
-                <p class="card-text">
-
-                    Hola Mundo
-
-                </p>
+                <img [src]="gif.images.downsized_medium.url" [alt]="gif.title">
+                
+                <div class="card-body text-light">
+                    <p class="card-text">
+                        
+                        {{ gif.title }}
+                        
+                    </p>
+                </div>
+                
             </div>
-
+            
         </div>
-
-    </div>
+        
+    }
 
 </div>
