--- a/03-gifs-app/src/app/gifs/pages/home-page/home-page.component.html
+++ b/03-gifs-app/src/app/gifs/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
     <!-- Listado de gifs -->
     <div class="col-12 pt-2">
 
-        <gifs-card-list></gifs-card-list>
+        <gifs-card-list [gifs]="gifs"></gifs-card-list>
         
     </div>
 
