--- a/03-gifs-app/src/app/shared/components/sidebar.component.html
+++ b/03-gifs-app/src/app/shared/components/sidebar.component.html
@@ -7,7 +7,7 @@
 
         @for(search of tags; track $index) {
 
-            <button class="list-group-item list-group-item-action">
+            <button (click)="reVisit(search)" class="list-group-item list-group-item-action">
                 {{ search | titlecase }}
             </button>
 
