--- a/04-countryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -46,13 +46,13 @@
 
                 <div class="m-1 d-flex flex-wrap">
 
-                    <span class="badge bg-primary m-1">{{ country.translations["spa"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["deu"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["ita"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["jpn"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["kor"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["fra"]?.common }}</span>
-                    <span class="badge bg-primary m-1">{{ country.translations["ara"]?.common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["spa"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["deu"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["ita"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["jpn"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["kor"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["fra"].common }}</span>
+                    <span class="badge bg-primary m-1">{{ country.translations["ara"].common }}</span>
 
                 </div>
                 
