--- a/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,5 +1,44 @@
-<h1>Hero Layout</h1>
+<mat-sidenav-container fullscreen>
 
-<router-outlet></router-outlet>
+    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
 
-<h5>Footer</h5>
+        <mat-toolbar>
+            <span>Menú</span>
+            <span class="spacer"></span>
+            <button mat-icon-button (click)="sidenav.toggle()">
+                <mat-icon>menu</mat-icon>
+
+            </button>
+            
+        </mat-toolbar>
+
+        <mat-nav-list>
+            <mat-list-item  routerLink="{{item.url}}" *ngFor="let item of sidebarItems">
+                <a><mat-icon>{{item.icon}}</mat-icon> {{item.label}}</a>
+            </mat-list-item>
+        </mat-nav-list>
+
+    </mat-sidenav>
+
+    <mat-toolbar color="primary">
+
+        <button mat-icon-button (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span class="spacer"></span>
+
+        <button mat-button>
+            Logout
+        </button>
+
+    </mat-toolbar>
+
+    <div class="container p-3">
+
+        <router-outlet></router-outlet>
+
+    </div>
+
+</mat-sidenav-container>
+
