--- a/06-heroesApp/src/app/heroes/pages/search-page/search-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,42 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+
+    <h1>Buscador</h1>
+
+    <mat-divider></mat-divider>
+
+    <mat-form-field>
+
+        <mat-label>Buscador de héroes</mat-label>
+
+        <input 
+            type="text"
+            matInput
+            [formControl]="searchInput"
+            (input)="searchHero()"
+            [matAutocomplete]="auto"
+        >
+
+        <mat-autocomplete 
+            autoActiveFirstOption 
+            #auto="matAutocomplete"
+            (optionSelected)="onSelectedOption( $event )"
+        >
+            @for (hero of heroes; track $index) {
+                <mat-option [value]="hero">
+                    
+                    {{ hero.superhero }}
+
+                </mat-option>
+            }
+
+            @if ( heroes.length === 0 && searchInput.value && searchInput.value.length > 0) {
+                <mat-option value="">
+                    No se encontró nada con el término {{ searchInput.value }}
+                </mat-option>
+            }
+
+        </mat-autocomplete>
+
+    </mat-form-field>
+
+</div>
