--- a/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,9 @@
-<h1>Editar / Añadir Héroe</h1>
+<h1>{{ ( currentHero.id )?"Editar":"Añadir"}} Héroe</h1>
 
 <mat-divider class="mb-2"></mat-divider>
+
+<button mat-icon-button (click)="goBack()"><mat-icon>arrow_back</mat-icon></button>
+
 
 <div class="grid">
     <div class="col-12 sm:col-6">
@@ -9,7 +12,7 @@
 
             <mat-card-content>
 
-                <div class="grid">
+                <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
     
                     <mat-form-field class="col-12 sm:col-6">
 
@@ -23,6 +26,7 @@
                             type="text"
                             matInput
                             required
+                            formControlName="superhero"
                         >
 
                     </mat-form-field>
@@ -39,6 +43,7 @@
                             type="text"
                             matInput
                             required
+                            formControlName="alter_ego"
                         >
 
                     </mat-form-field>
@@ -55,6 +60,8 @@
                             type="text"
                             matInput
                             required
+                            formControlName="first_appearance"
+
                         >
 
                     </mat-form-field>
@@ -71,11 +78,28 @@
                             type="text"
                             matInput
                             required
+                            formControlName="characters"
                         >
 
                     </mat-form-field>
 
-                    <mat-form-field class="col-12">
+                    <mat-form-field class="col-12 sm:col-6">
+
+                        <mat-label>
+
+                            Imagen Alternativa
+
+                        </mat-label>
+
+                        <input 
+                            type="text"
+                            matInput
+                            formControlName="alt_img"
+                        >
+
+                    </mat-form-field>
+
+                    <mat-form-field class="col-12 sm:col-6">
 
                         <mat-label>
 
@@ -83,7 +107,10 @@
 
                         </mat-label>
 
-                        <mat-select required>
+                        <mat-select 
+                            formControlName="publisher"
+                            required
+                        >
                             @for (publisher of publishers; track $index) {
                                 <mat-option [value]="publisher.id">{{publisher.desc}}</mat-option>
                             }
@@ -91,21 +118,28 @@
 
                     </mat-form-field>
                     
-                </div>
+                </form>
 
                 <div class="flex justify-content-between">    
+                
                     
                     <button 
                     mat-flat-button
-                    color="warn">
-                        Borrar
+                    color="primary"
+                    (click)="onSubmit()">
+                        Guardar <mat-icon>save</mat-icon>
                     </button>
-                    
-                    <button 
-                    mat-flat-button
-                    color="primary">
-                        Guardar
-                    </button>
+
+                    @if( currentHero.id ) {
+
+                        <button 
+                        mat-flat-button
+                        (click)="onDeleteHero()"
+                        color="warn">
+                            Borrar <mat-icon>delete</mat-icon>
+                       </button>
+                        
+                    }
 
                 </div>
             
@@ -119,7 +153,7 @@
     <div class="col-12 sm:col-6">
 
         <mat-card>
-            <img src="" alt="Imagen del Héroe" mat-card-image>
+            <img [src]="currentHero | heroImage" alt="Imagen del Héroe" mat-card-image>
         </mat-card>
 
     </div>
