--- a/07-formsApp/src/app/auth/pages/register-page/register-page.component.html
+++ b/07-formsApp/src/app/auth/pages/register-page/register-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
 
-        <form autocomplete="off">
+        <form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete="off">
 
             <!-- Nombre -->
             <div class="row mb-3">
@@ -12,11 +12,16 @@
                 <div class="col-sm-9">
                     <input type="text"
                            class="form-control"
+                           formControlName="name"
                            placeholder="Nombre del usuario">
 
-                    <span class="form-text text-danger">
-                        Debe de ser en formato de nombre y apellido
-                    </span>
+                    @if ( this.isValidField("name") ) {
+   
+                        <span class="form-text text-danger">
+                            Debe de ser en formato de nombre y apellido
+                        </span>
+
+                    }
                 </div>
             </div>
 
@@ -26,10 +31,17 @@
                 <div class="col-sm-9">
                     <input type="email"
                            class="form-control"
+                           formControlName="email"
                            placeholder="Email del usuario">
-                    <span class="form-text text-danger">
-                        mensaje de error del email
-                    </span>
+
+                    @if ( this.isValidField("email") ) {
+
+                        <span class="form-text text-danger">
+                            mensaje de error del email
+                        </span>
+
+                    }
+
                 </div>
             </div>
 
@@ -38,11 +50,18 @@
                 <label class="col-sm-3 col-form-label">Username</label>
                 <div class="col-sm-9">
                     <input type="text"
+                            formControlName="username"
                            class="form-control"
                            placeholder="Nombre código del usuario">
-                    <span class="form-text text-danger">
-                         El username no puede ser Strider
-                    </span>
+
+                    @if ( this.isValidField("username") ) {
+
+                        <span class="form-text text-danger">
+                            El username no puede ser Strider
+                        </span>
+
+                    }
+
                 </div>
             </div>
 
@@ -52,11 +71,17 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
+                           formControlName="password"
                            placeholder="Password de su cuenta">
 
-                    <span class="form-text text-danger">
-                         La contraseña debe de ser mayor de 6 caracteres.
-                    </span>
+                    @if ( this.isValidField("password") ) {
+
+                        <span class="form-text text-danger">
+                            La contraseña debe de ser mayor de 6 caracteres.
+                        </span>
+
+                    }
+
                 </div>
             </div>
 
@@ -66,11 +91,16 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
+                           formControlName="password2"
                            placeholder="Confirmar la contraseña">
 
-                    <span class="form-text text-danger">
-                         Las contraseñas deben de ser iguales
-                    </span>
+                    @if ( this.isValidField("password2") ) {
+
+                        <span class="form-text text-danger">
+                            Las contraseñas deben de ser iguales
+                        </span>
+
+                    }
                 </div>
             </div>
 
@@ -90,24 +120,14 @@
 </div>
 
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
+<h2>Form Valid: {{ myForm.valid }} </h2>
+<h2>Form Status: {{ myForm.status }} </h2>
+<h2>Form Pending: {{ myForm.pending }} </h2>
 <h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.errors| json }}</pre>
 
-<h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<h5>Valor</h5>
+<pre>{{ myForm.value| json }}</pre>
 
-<h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-
-<h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<h5>Error password2</h5>
+<pre>{{ myForm.controls["password2"].errors | json }}</pre>
