--- a/10-mapsApp/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/10-mapsApp/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,17 @@
-<p>markers-page works!</p>
+<div id="map" #map></div>
+
+<ul class="list-group">
+    @for (colorMarker of markers; track $index) {
+        <li 
+            class="list-group-item"
+            (click)="flyTo(colorMarker.marker)"
+            (dblclick)="deleteMarker($index)"
+            [ngStyle]="{backgroundColor: colorMarker.color}">
+            Marker {{ $index + 1 }}
+        </li>
+    }
+</ul>
+
+<button (click)="createMarker()" class="btn btn-primary">
+    + Agregar marcador
+</button>
