Sección 22: Standalone Components

--- a/10-mapsApp/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/10-mapsApp/src/app/maps/pages/properties-page/properties-page.component.html
@@ -28,6 +28,11 @@
                 </div>
 
             }
+            <div class="col-4 mb-2">
+
+                <counter-alone [counter]="100"></counter-alone>
+
+            </div>
 
         </div>
     </div>
